add README and setting for android

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.example.tictactoe",
-  "appName": "TicTacToeGame",
+  "appName": "TicTacToe",
   "webDir": "dist",
   "bundledWebRuntime": false
 }
