--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,3 +20,8 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+RELEASE_STORE_FILE=keystore/my-release-key.jks
+RELEASE_STORE_PASSWORD=123_R3ntCar_App2025!Password!
+RELEASE_KEY_ALIAS=my-key-alias
+RELEASE_KEY_PASSWORD=123_R3ntCar_App2025!Password!
+
