add new Project Tetris Game and write bacic components

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.example.tictactoe",
-  "appName": "TicTacToe",
+  "appName": "Tetris",
   "webDir": "dist",
   "bundledWebRuntime": false
 }
